add player dependence

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(path: ':redux')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.google.android.exoplayer:exoplayer:r2.2.0'
 }
 repositories {
     mavenCentral()
